added backend reminder and fixed uploadtime with deadline

--- a/src/App.css
+++ b/src/App.css
@@ -1089,6 +1089,7 @@ input[type="file"]::placeholder {
 
 .course-header {
   margin-top: 1%;
+  margin-bottom: 1%;
   font-weight: bold;
   color: #7939FF;
   font-size: 269%;
