fixed images and login error

--- a/src/App.css
+++ b/src/App.css
@@ -3401,7 +3401,7 @@ video:focus-within {
 
 .home-myAssTitleContainer {
   padding: 0% 1.6%;
-  min-width: 325px;
+  min-width: 333px;
 }
 
 .home-myAssTitle {
@@ -3434,8 +3434,10 @@ video:focus-within {
   color: #fff;
   font-size: 150%;
   background-color: #7939ff;
-  width: 10rem;
-  height: 2.77rem;
+  /* width: 10rem; */
+  width: 10.75rem;
+  /* height: 2.77rem; */
+  height: 3rem;
   border: none;
   border-radius: 0.9rem;
 }
@@ -3605,13 +3607,13 @@ video:focus-within {
     padding-right: 1%;
   }
   .home-myAssBtn {
-    color: #000;
+    /* color: #000; */
     font-size: 80% !important;
     background-color: #7939ff;
-    width: 5.5rem !important;
-    height: 1.9rem !important;
+    width: 5.75rem !important;
+    height: 2rem !important;
     border: none;
-    border-radius: 0.5rem !important;
+    border-radius: 0.75rem !important;
     cursor: default !important;
   }
   .home-QuizContainer {
