--- a/src/App.css
+++ b/src/App.css
@@ -1978,6 +1978,16 @@ input[type="file"]::placeholder {
     width: 15rem !important;
     height: 3rem !important;
   }
+  .camera-modal {
+    width: auto !important;
+  }
+  .captured-photo-container {
+    max-width: 484px !important;
+    max-height: 360px !important;
+  }
+  .captured-photo {
+    max-width: 480px !important;
+  }
 }
 
 /* .announcements-hr {
@@ -3823,6 +3833,9 @@ video:focus-within {
     width: 15rem !important;
     height: 3rem !important;
   }
+  .camera-modal {
+    width: auto !important;
+  }
 }
 
 .logOutModal-container {
@@ -4274,19 +4287,39 @@ video:focus-within {
   padding: 10px;
 }
 
+.message-wrapper {
+  margin-bottom: 8px;
+  display: flex;
+  flex-direction: column;
+  align-self: flex-end;
+}
+
 .message {
   margin: 5px 0;
-  padding: 8px 15px;
+  padding: 3px 8px;
   border-radius: 10px;
   word-wrap: break-word;
   width: max-content;
+  background-color: #7939ff;
+  color: #fff;
+  align-self: flex-end;
+  margin-left: auto;
   /* max-width: 666px; */
   max-width: 500px;
-  display: flex;
+  /* display: flex; */
+}
+
+.message-sender {
+  /* font-weight: bold; */
+  font-size: 0.7rem;
+  color: #333;
+  /* margin-bottom: 4px; */
+  align-self: flex-end;
 }
 
 .message-content {
   width: 100%;
+  text-align: center;
 }
 
 .user {
@@ -4304,8 +4337,11 @@ video:focus-within {
 }
 
 .message-timestamp {
-  color: #888;
-  font-size: 0.8em;
+  color: #ffffffbd;
+  /* align-self: flex-end; */
+  text-align: end;
+  /* display: flex; */
+  font-size: 0.6em;
 }
 
 .chat-input {
@@ -5009,5 +5045,36 @@ video:focus-within {
 
 .quiz-icon {
   height: 315px;
+}
+
+.attendance-cameraBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.25rem;
+  height: 4.5rem;
+  width: 15rem;
+  background-color: transparent;
+  border: 2px solid #7939FF;
+  color: #7939FF;
+  border-radius: 0.75rem;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+}
+
+.attendance-cameraBtn:hover {
+  color: #fff;
+  border: none;
+  background-color: #7939FF;
+}
+
+.attendance-cameraBtn:focus .attendance-cameraBtn:focus-within {
+  outline: none;
+  box-shadow: 0 0 0 0.2rem rgba(120, 56, 255, 0.5);
+}
+
+/* Active effect */
+.attendance-cameraBtn:active {
+  background-color: #5c26e3;
 }
 
