--- a/src/App.css
+++ b/src/App.css
@@ -622,7 +622,8 @@ input[type="password"] {
 }
 
 .userChevron {
-  font-size: 0.9rem;
+  font-size: 0.75rem;
+  margin-left: 0.25rem;
   color: #fff;
   /* padding: 1px; */
 }
@@ -1880,6 +1881,14 @@ input[type="file"]::placeholder {
     padding: 10px;
     font-size: 83%;
   }
+  .attendance-photo-container {
+    max-width: 320px !important;
+    max-height: 180px !important;
+  }
+  .attendance-photo {
+    max-width: 320px !important;
+    max-height: 180px !important;
+  }
 }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
@@ -1994,6 +2003,15 @@ input[type="file"]::placeholder {
   }
   .captured-photo {
     max-width: 480px !important;
+  }
+  .attendance-photo-container {
+    max-width: 640px !important;
+    max-height: 360px !important;
+    width: 640px !important;
+  }
+  .attendance-photo {
+    max-width: 640px !important;
+    max-height: 360px !important;
   }
 }
 
@@ -5062,6 +5080,25 @@ video:focus-within {
   height: 315px;
 }
 
+.cameraBtn-container {
+  width: 100%;
+  height: 23vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sendAttendanceBtn-container {
+  width: 100%;
+  /* height: 23vh; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  z-index: 9999;
+  bottom: 10%;
+}
+
 .attendance-cameraBtn {
   display: flex;
   align-items: center;
@@ -5088,8 +5125,56 @@ video:focus-within {
   box-shadow: 0 0 0 0.2rem rgba(120, 56, 255, 0.5);
 }
 
-/* Active effect */
 .attendance-cameraBtn:active {
   background-color: #5c26e3;
+}
+
+.attendance-sendBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.25rem;
+  height: 4.5rem;
+  width: 15rem;
+  background-color: transparent;
+  border: 2px solid #7939FF;
+  color: #7939FF;
+  border-radius: 0.75rem;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+}
+
+.attendance-sendBtn:hover {
+  color: #fff;
+  border: none;
+  background-color: #7939FF;
+}
+
+.attendance-sendBtn:focus .attendance-sendBtn:focus-within {
+  outline: none;
+  box-shadow: 0 0 0 0.2rem rgba(120, 56, 255, 0.5);
+}
+
+.attendance-sendBtn:active {
+  background-color: #5c26e3;
+}
+
+.attendance-photo-container {
+  position: fixed;
+  /* bottom: 3.1rem; */
+  /* top: 1rem; */
+  margin-top: 0.75rem;
+  max-width: 960px;
+  max-height: 540px;
+  width: 960px;
+  height: 540px;
+  box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.3);
+}
+
+.attendance-photo {
+  max-width: 960px;
+  max-height: 540px;
+  width: 960px;
+  height: 540px;
 }
 
