--- a/src/App.css
+++ b/src/App.css
@@ -78,7 +78,7 @@ body{
   justify-content: center;
   align-items: center; */
   width: 190px;
-  height: 100px;
+  height: 105px;
   z-index: 1000;
   top: 4%;
   left: 5%;
@@ -122,6 +122,9 @@ body{
 }
 
 .contForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   max-width: 666px;
   margin: 236px auto auto auto;
   /* display: flex;
@@ -144,6 +147,9 @@ body{
 }
 
 .loginForm {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
   padding: 56px 36px;
 }
 
@@ -187,8 +193,10 @@ input[type="password"] {
 
 .loginForm .submit {
   margin: 2.5rem 0 15px 0;
-  height: 49.21px;
-  width: 203.41px;
+  /* height: 49.21px; */
+  /* width: 203.41px; */
+  height: 3rem;
+  width: 13rem;
   font-size: 20px;
   color: white;
   background-color: #7939ff;
@@ -292,7 +300,7 @@ input[type="password"] {
 }
 #passwordInput #password{
   width: 100%;
-  /* padding: 10px 0; */
+  padding: 30px 42px 30px 2px;
   border: 0;
   outline: 0;
   font-size: 135%;
