--- a/src/App.css
+++ b/src/App.css
@@ -1897,6 +1897,10 @@ input[type="file"]::placeholder {
     max-width: 320px !important;
     max-height: 180px !important;
   }
+  .attendance-video {
+    width: 304px !important;
+    height: 180px !important;
+  }
 }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
@@ -2020,6 +2024,10 @@ input[type="file"]::placeholder {
   .attendance-photo {
     max-width: 640px !important;
     max-height: 360px !important;
+  }
+  .attendance-video {
+    width: 540px !important;
+    height: 300px !important;
   }
 }
 
@@ -2680,7 +2688,7 @@ input[type="file"]::placeholder {
 }
 
 .photoOrAudio-container {
-  height: 13.6rem;
+  height: 8rem;
   /* width: 75%; */
   width: 54%;
   display: flex;
@@ -5090,10 +5098,11 @@ video:focus-within {
 
 .cameraBtn-container {
   width: 100%;
-  height: 23vh;
+  /* height: 23vh; */
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .sendAttendanceBtn-container {
@@ -5104,7 +5113,7 @@ video:focus-within {
   justify-content: center;
   position: absolute;
   z-index: 9999;
-  bottom: 10%;
+  bottom: 3%;
 }
 
 .attendance-cameraBtn {
@@ -5133,8 +5142,18 @@ video:focus-within {
   box-shadow: 0 0 0 0.2rem rgba(120, 56, 255, 0.5);
 }
 
-.attendance-cameraBtn:active {
-  background-color: #5c26e3;
+button.attendance-cameraBtn:active {
+  background-color: #5c26e3 !important;
+  color: #ffffff !important;  /* Example to change text color */
+  cursor: not-allowed !important;
+  border-color: #5c26e3 !important;  /* Example to change border color */
+}
+
+button.attendance-cameraBtn:disabled, button.attendance-sendBtn:disabled {
+  background-color: #5c26e3 !important;
+  color: #ffffff !important; /* Example to change text color */
+  cursor: not-allowed !important;
+  border-color: #5c26e3 !important; /* Example to change border color */
 }
 
 .attendance-sendBtn {
@@ -5158,13 +5177,21 @@ video:focus-within {
   background-color: #7939FF;
 }
 
-.attendance-sendBtn:focus .attendance-sendBtn:focus-within {
+button.attendance-sendBtn:focus, button.attendance-sendBtn:focus-within {
   outline: none;
   box-shadow: 0 0 0 0.2rem rgba(120, 56, 255, 0.5);
 }
 
-.attendance-sendBtn:active {
-  background-color: #5c26e3;
+button.attendance-sendBtn:active, button.attendance-sendBtn:disabled {
+  background-color: #5c26e3 !important;
+}
+
+.attendance-video {
+  width: 720px;
+  height: 540px;
+  margin: auto;
+  max-width: none;
+  /* border-radius: 1rem; */
 }
 
 .attendance-photo-container {
@@ -5172,17 +5199,116 @@ video:focus-within {
   /* bottom: 3.1rem; */
   /* top: 1rem; */
   margin-top: 0.75rem;
-  max-width: 960px;
+  max-width: 720px;
   max-height: 540px;
-  width: 960px;
+  width: 720px;
   height: 540px;
   box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.3);
+  border-radius: 0.5rem;
 }
 
 .attendance-photo {
-  max-width: 960px;
+  border-radius: 0.5rem;
+  max-width: 720px;
   max-height: 540px;
-  width: 960px;
+  width: 720px;
   height: 540px;
 }
 
+.postRequestBtn-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.post-request-btn {
+  border-radius: 3rem;
+  background-color: #7939FF;
+  border: #7939FF;
+  font-size: large;
+  transition: transform 0.2s ease;
+}
+
+button.post-request-btn:hover, button.post-request-btn:active, button.post-request-btn:focus, .post-request-btn:disabled {
+  background-color: #7939FF !important;
+  border: none;
+  transform: scale(1.05);
+}
+
+button.post-request-btn:active, button.post-request-btn:focus, .post-request-btn:disabled {
+  background-color: #7939FF !important;
+  border: none;
+}
+
+.save-attendanceBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.625rem;
+  height: 4.5rem;
+  width: 19rem;
+  /* background-color: transparent; */
+  /* margin-top: 3rem; */
+  border: 2px solid;
+  /* color: #666; */
+  /* border-radius: 0.75rem; */
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+}
+
+/* .save-attendanceBtn:hover {
+  color: #fff;
+  border: none;
+  background-color: #666;
+}
+
+.save-attendanceBtn:focus .save-attendanceBtn:focus-within {
+  outline: none;
+  box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.5);
+}
+
+button.save-attendanceBtn:active {
+  background-color: #000000cc !important;
+  color: #ffffff !important;
+  cursor: not-allowed !important;
+  border-color: #000000d8 !important;
+}
+
+button.save-attendanceBtn:disabled, button.save-attendanceBtn:disabled {
+  background-color: #111111 !important;
+  color: #ffffff !important;
+  cursor: not-allowed !important;
+  border-color: #202020 !important;
+} */
+
+/* .calendar-container {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  background: #f7f7f7;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+} */
+
+div.react-calendar {
+  width: 100%;
+  /* border: none; */
+  font-family: Arial, sans-serif;
+}
+
+/* .react-calendar__tile--active,
+.react-calendar__tile--now {
+  background: #7939ff;
+  color: white;
+}
+
+.event-title {
+  font-size: 0.8rem;
+  color: #7939ff;
+} */
+
+.attendance-vector {
+  max-width: 333px;
+  max-height: 333px;
+}
